fix: adjusted price gap

--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -35,7 +35,7 @@
 
 .prices {
   display: flex;
-  gap: 1em;
+  gap: 0.5em;
 }
 
 .deal {
